--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <h1 class="text-center">Random Quote Generator</h1>
-    <div class="quote " id="quote-cont">
-        <div id="quote-box " class=" realquote">
+        <div id="quote-box" class="realquote border">
             <p id="text" class="text-center">
                 Random Quote
             </p>
@@ -39,7 +38,6 @@
         </div>
 
 
-    </div>
 </body>
 <script src="jquery-3.7.1.min.js"></script>
 <script src=" https://cdn.jsdelivr.net/npm/jquery-validation@1.20.0/dist/jquery.validate.min.js "></script>
@@ -49,5 +47,5 @@
     crossorigin="anonymous"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
